	* Translated to Spanish


Install an update
-----------------

    * Stop Collect if it's running
    * Clear data (this will removed any previously collected data)
    * Download and install Collect.apk
    * Start Collect
    * Choose your collect.db file in the file chooser


Changes
-------

2014-10-xx

    * Fixed survey import when a survey already is imported

2014-09-26

    * Supported new format on .collect-mobile files
    * Verified that the Collect version used to export a survey is supported by Collect Mobile

2014-09-17

    * Fixed crash for some xpath expressions

2014-09-16

    * Showed calculated attributed
    * Fixed bug where the relevance of entities wasn't updated properly
    * Fixed bug where validation of external code list items failed

2014-09-04

    * Fixed bug where calculated attributes where shown

2014-09-02

    * Use node name if label is undefined

2014-07-31

    * Supported free text code items
    * Prevented entity key panel from overlapping node details
    * Added support for latest Collect Server version
    * Translated to Spanish

2014-07-25

    * Fixed crash in species selection

2014-07-23

    * Allowed the exact path of the working directory to be specified
    * Included a panel with the entity keys, to provide information what entity data is inserted for.

2014-07-18

    * Added option to store data on SD card
    * Included backup functionality
    * Specified crew ID is now displayed in the settings
    * Put exported files on SD card if data is stored on secondary storage
    * Moved exported records directly into the cleansing phase
    * Marked empty attributes as "blank in form"

2014-07-11

    * Added setting to capture the crew ID
    * Supported survey design format exported in Collect Server
    * Uniqueness or record keys are validated
    * Fixed bug where record list wasn't properly updated when record key node changed

2014-07-04
